<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>


    <string name="popular_movies_txt">POPULAR MOVIES</string>
    <string name="popular_movies_btn">popularMoviesTextView</string>
    <string name="stock_hawk_txt">SCORES APP</string>
    <string name="stock_hawk_btn">stockHawkTextViewP</string>
    <string name="library_txt">LIBRARY APP</string>
    <string name="library_btn">libraryTextView</string>
    <string name="build_it_txt">BUILD IT BIGGER</string>
    <string name="build_it_btn">buildItBiggerTextView</string>
    <string name="make_your_app_material_txt">MAKE YOUR APP MATERIAL</string>
    <string name="make_your_app_material_btn">makeYourAppMaterialTextView</string>
    <string name="go_ubiquitous_txt">GO UBIQUITOUS</string>
    <string name="go_ubiquitous_btn">goUbiquitousTextView</string>
    <string name="capstone_txt">CAPSTONE</string>
    <string name="capstone_btn">capstoneTextView</string>

    <string name="toolbar_title">My App Portfolio</string>
    <string name="layout_title_txt">My Nanodegree Apps!</string>
</resources>
