<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.udaproject0.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:title="@string/toolbar_title"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" android:elevation="4dp"
        app:titleTextColor="#FFFFFFFF">

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/toolbar_title"
                  android:gravity="center_horizontal"
                  android:layout_marginTop="17dp"
                  android:textColor="#FFFFFF"
                  android:textSize="20sp"
                  android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/container" android:gravity="center_horizontal"
                  android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                  android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_title_txt" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:textSize="23sp"
            android:singleLine="true" android:textColor="#517996" android:layout_marginTop="70dp"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:id="@+id/button_container" android:gravity="center_horizontal"
                      android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
                      android:layout_weight="0.81">

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorOrangeCrd"
                android:id="@+id/popularMoviesBtn"
                android:layout_marginTop="8dp">

                <TextView android:layout_width="200dp"
                          android:layout_height="match_parent"
                          android:id="@+id/popularMoviesTextView"
                          android:text="@string/popular_movies_txt"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:gravity="center" android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorOrangeCrd"
                android:id="@+id/stockHawkBtn"
                android:layout_marginTop="8dp">

                <TextView android:layout_width="200dp"
                          android:layout_height="match_parent"
                          android:id="@+id/stockHawkTextView"
                          android:text="@string/stock_hawk_txt"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:gravity="center" android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorOrangeCrd"
                android:id="@+id/buildItBiggerBtn"
                android:layout_marginTop="8dp">

                <TextView android:layout_width="200dp"
                          android:layout_height="match_parent"
                          android:id="@+id/buildItBiggerTextView"
                          android:text="@string/build_it_txt"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:gravity="center" android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorOrangeCrd"
                android:id="@+id/makeYourAppMaterialBtn"
                android:layout_marginTop="8dp">

                <TextView android:layout_width="200dp"
                          android:layout_height="match_parent"
                          android:id="@+id/makeYourAppMaterialTextView"
                          android:text="@string/make_your_app_material_txt"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:gravity="center" android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorOrangeCrd"
                android:id="@+id/goUbiquitousBtn"
                android:layout_marginTop="8dp">

                <TextView android:layout_width="200dp"
                          android:layout_height="match_parent"
                          android:id="@+id/goUbiquitousTextView"
                          android:text="@string/go_ubiquitous_txt"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:gravity="center" android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorRedCrd"
                android:id="@+id/capstoneBtn"
                android:layout_marginTop="8dp">

                <TextView android:layout_width="200dp"
                          android:layout_height="match_parent"
                          android:id="@+id/capstoneTextview"
                          android:text="@string/capstone_txt"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:gravity="center" android:textStyle="bold"/>

            </android.support.v7.widget.CardView>





        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
